timestamp to datetime string

--- a/disk/templates/disk/fileList.html
+++ b/disk/templates/disk/fileList.html
@@ -58,7 +58,7 @@
                                 <td>{{ file.key | cutPrefix:prefix }}</td>
                                 <td>{{ file.mimeType }}</td>
                                 <td>{{ file.fsize | fileSize }}</td>
-                                <td>{{ file.putTime }}</td>
+                                <td>{{ file.putTime | timeStampToString }}</td>
                             </tr>
                         {% endfor %}
 
