add some buttons

--- a/disk/templates/disk/fileList.html
+++ b/disk/templates/disk/fileList.html
@@ -61,7 +61,17 @@
                                 <td>{{ file.mimeType }}</td>
                                 <td>{{ file.fsize | fileSize }}</td>
                                 <td>{{ file.putTime | timeStampToString }}</td>
-                                <td><a class="btn btn-success" href="/disk/file/download/{{ file.key }}/" download>Download</a> </td>
+                                <td>
+                                    <a class="btn btn-success btn-fill btn-sm" href="/disk/file/download/{{ file.key }}/" download>
+                                        <i class="ti-download"></i>
+                                    </a>
+                                    <a class="btn btn-warning btn-fill btn-sm" href="#">
+                                        <i class="ti-pencil"></i>
+                                    </a>
+                                    <a class="btn btn-danger btn-fill btn-sm" href="#">
+                                        <i class="ti-trash"></i>
+                                    </a>
+                                </td>
                             </tr>
                         {% endfor %}
 
