--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.bootcss.com/animate.css/3.5.2/animate.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.staticfile.org/qiniu-js-sdk/1.0.14-beta/qiniu.min.js"></script>
+    <script src="https://cdn.staticfile.org/plupload/3.1.0/plupload.min.js"></script>
+    <script src="https://cdn.staticfile.org/plupload/3.1.0/i18n/zh_CN.js"></script>
     <link rel="stylesheet" href="{% static 'paper-theme/paper.css' %}">
     <link rel="stylesheet" href="{% static 'paper-theme/themify-icons.css' %}">
     <title>{% block title %}Lair{% endblock %}</title>
