--- a/disk/templates/disk/fileUpload.html
+++ b/disk/templates/disk/fileUpload.html
@@ -11,9 +11,55 @@
 {% block content %}
     Upload file to <b>/{{ prefix }}</b>
 
-    <div id="fileContainer" style="background: #a0a0a0; width: 100%;height: 200px;"></div>
+    <div>
+        <div id="fileContainer" style="background: #a0a0a0; width: 100%;height: 200px;"></div>
+        <button id="pickFiles">Pick files</button>
+    </div>
 
-    <button id="pickFiles">Pick files</button>
+{#    <div class="modal fade" id="uploadStatusModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: block; padding-left: 0px;">#}
+{#        <div class="modal-dialog">#}
+{#            <div class="modal-content">#}
+{#                <div class="modal-header">#}
+{#                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>#}
+{#                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>#}
+{#                </div>#}
+{#                <div class="modal-body">#}
+{#                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.#}
+{#                </div>#}
+{#                <div class="modal-footer">#}
+{#                    <div class="left-side">#}
+{#                        <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Never mind</button>#}
+{#                    </div>#}
+{#                    <div class="divider"></div>#}
+{#                    <div class="right-side">#}
+{#                        <button type="button" class="btn btn-danger btn-simple">Delete</button>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+    <div class="modal fade" id="uploadStatusModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.
+                </div>
+                <div class="modal-footer">
+                    <div class="left-side">
+                        <button type="button" class="btn btn-default btn-simple" data-dismiss="modal">Never mind</button>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="right-side">
+                        <button type="button" class="btn btn-danger btn-simple">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script>
@@ -23,7 +69,7 @@
             // 在初始化时，uptoken，uptoken_url，uptoken_func三个参数中必须有一个被设置
             // 切如果提供了多个，其优先级为uptoken > uptoken_url > uptoken_func
             // 其中uptoken是直接提供上传凭证，uptoken_url是提供了获取上传凭证的地址，如果需要定制获取uptoken的过程则可以设置uptoken_func
-{#            uptoken : '{{ upToken }}', // uptoken是上传凭证，由其他程序生成#}
+            {#            uptoken : '{{ upToken }}', // uptoken是上传凭证，由其他程序生成#}
             uptoken_url: '/disk/file/uploadToken/',         // Ajax请求uptoken的Url，强烈建议设置（服务端提供）
             // uptoken_func: function(){    // 在需要获取uptoken时，该方法会被调用
             //    // do something
@@ -32,15 +78,15 @@
             get_new_uptoken: false,             // 设置上传文件的时候是否每次都重新获取新的uptoken
             // downtoken_url: '/downtoken',
             // Ajax请求downToken的Url，私有空间时使用，JS-SDK将向该地址POST文件的key和domain，服务端返回的JSON必须包含url字段，url值为该文件的下载地址
-            // unique_names: true,              // 默认false，key为文件名。若开启该选项，JS-SDK会为每个文件自动生成key（文件名）
-            // save_key: true,                  // 默认false。若在服务端生成uptoken的上传策略中指定了sava_key，则开启，SDK在前端将不对key进行任何处理
+            unique_names: false,              // 默认false，key为文件名。若开启该选项，JS-SDK会为每个文件自动生成key（文件名）
+            save_key: false,                  // 默认false。若在服务端生成uptoken的上传策略中指定了sava_key，则开启，SDK在前端将不对key进行任何处理
             domain: '{{ bucketDomain }}',     // bucket域名，下载资源时用到，必需
-            container: 'fileContainer',             // 上传区域DOM ID，默认是browser_button的父元素
-{#            max_file_size: '100mb',             // 最大文件体积限制#}
-{#            flash_swf_url: 'https://cdn.staticfile.org/plupload/3.1.0/Moxie.swf',  //引入flash，相对路径#}
+            {#            container: '',             // 上传区域DOM ID，默认是browser_button的父元素#}
+            {#            max_file_size: '100mb',             // 最大文件体积限制#}
+            {#            flash_swf_url: 'https://cdn.staticfile.org/plupload/3.1.0/Moxie.swf',  //引入flash，相对路径#}
             max_retries: 3,                     // 上传失败最大重试次数
             dragdrop: true,                     // 开启可拖曳上传
-            drop_element: 'container',          // 拖曳上传区域元素的ID，拖曳文件或文件夹后可触发上传
+            drop_element: 'fileContainer',          // 拖曳上传区域元素的ID，拖曳文件或文件夹后可触发上传
             chunk_size: '4mb',                  // 分块上传时，每块的体积
             auto_start: true,                   // 选择文件后自动上传，若关闭需要自己绑定事件触发上传
             //x_vars : {
@@ -59,6 +105,7 @@
             init: {
                 'FilesAdded': function(up, files) {
                     console.log('FilesAdded');
+                    $("#uploadStatusModal").modal();
                     plupload.each(files, function(file) {
                         // 文件添加进队列后，处理相关的事情
                         console.log(file);
@@ -100,9 +147,7 @@
                 'Key': function(up, file) {
                     // 若想在前端对每个文件的key进行个性化处理，可以配置该函数
                     // 该配置必须要在unique_names: false，save_key: false时才生效
-{#                    var key = "";#}
-                    // do something with key here
-{#                    return key#}
+                    return '{{ prefix }}'+file.name;
                 }
             }
         });
