--- a/templates/main.html
+++ b/templates/main.html
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                     <li class="{% block diskActive %}{% endblock %}">
-                        <a href="/disk/">
+                        <a href="/disk/file/list/">
                             <i class="ti-harddrives"></i>
                             <p>Disk</p>
                         </a>
