--- a/disk/templates/disk/fileList.html
+++ b/disk/templates/disk/fileList.html
@@ -29,7 +29,7 @@
 {#                    <p class="category">Here is a subtitle for this table</p>#}
                 </div>
                 <div class="content table-responsive table-full-width">
-                    <table class="table table-striped">
+                    <table class="table table-hover">
                         <thead>
                         <th></th>
                         <th>Name</th>
@@ -41,7 +41,7 @@
                         <tbody>
                         {% for dir in dirs %}
                             <tr>
-                                <td>
+                                <td style="font-size: 20px">
                                     <i class="ti-folder"></i>
                                 </td>
                                 <td>
@@ -57,8 +57,20 @@
                         {% endfor %}
                         {% for file in files %}
                             <tr>
-                                <td>
-                                    <i class="ti-file"></i>
+                                <td style="font-size: 20px">
+                                    {% if file.mimeType == 'image/jpeg' or file.mimeType == 'image/png' %}
+                                        <i class="ti-image"></i>
+                                    {% elif file.mimeType == 'application/pdf' %}
+                                        <i class="ti-book"></i>
+                                    {% elif file.mimeType == 'application/zip' or file.mimeType == 'application/rar' %}
+                                        <i class="ti-zip"></i>
+                                    {% elif file.mimeType == 'audio/mpeg' or file.mimeType == 'audio/wav' %}
+                                        <i class="ti-music-alt"></i>
+                                    {% elif file.mimeType == 'application/msword' %}
+                                        <i class="ti-write"></i>
+                                    {% else %}
+                                        <i class="ti-file"></i>
+                                    {% endif %}
                                 </td>
                                 <td>{{ file.key | cutPrefix:prefix }}</td>
                                 <td>{{ file.mimeType }}</td>
