file rename done

--- a/disk/templates/disk/fileList.html
+++ b/disk/templates/disk/fileList.html
@@ -80,7 +80,7 @@
                                     <a class="btn btn-success btn-fill btn-sm" href="/disk/file/download/{{ file.key }}/" download>
                                         <i class="ti-download"></i>
                                     </a>
-                                    <a class="btn btn-warning btn-fill btn-sm" href="#">
+                                    <a class="btn btn-warning btn-fill btn-sm" href="/disk/file/rename/{{ file.key }}/">
                                         <i class="ti-pencil"></i>
                                     </a>
                                     <a class="btn btn-danger btn-fill btn-sm" href="#">
