--- a/disk/templates/disk/fileList.html
+++ b/disk/templates/disk/fileList.html
@@ -24,9 +24,10 @@
                         {% endfor %}
                     </h4>
                     <div style="float: right;">
+                        <a class="btn btn-default" href="/disk/folder/create/{{ prefix }}">Create Folder</a>
                         <a class="btn btn-default btn-fill" href="/disk/file/upload/{{ prefix }}">Upload</a>
                     </div>
-{#                    <p class="category">Here is a subtitle for this table</p>#}
+                    {#                    <p class="category">Here is a subtitle for this table</p>#}
                 </div>
                 <div class="content table-responsive table-full-width">
                     <table class="table table-hover">
@@ -96,7 +97,6 @@
                 </div>
             </div>
         </div>
-
 
     </div>
 {% endblock %}
