--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -47,7 +47,8 @@
         <div class="container">
             <div class="row" style="padding-top: 10vh">
                 <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
-                    <form method="#" action="#">
+                    <form method="post" action="./">
+                        {% csrf_token %}
                         <div class="card" data-background="color" data-color="blue" style="padding: 15px;">
                             <div class="card-header">
                                 <h3 class="card-title">Login</h3>
@@ -65,6 +66,11 @@
                             <div class="card-footer text-center">
                                 <button type="submit" class="btn btn-fill btn-wd ">Login</button>
                             </div>
+                            {% if errorMessage %}
+                                <div>
+                                    {{ errorMessage }}
+                                </div>
+                            {% endif %}
                         </div>
                     </form>
                 </div>
