--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -67,7 +67,7 @@
                                 <button type="submit" class="btn btn-fill btn-wd ">Login</button>
                             </div>
                             {% if errorMessage %}
-                                <div>
+                                <div style="width: 100%;text-align: center;color: #828282;padding-top: 5px">
                                     {{ errorMessage }}
                                 </div>
                             {% endif %}
